terraform/environments/cloud-platform/network/eks-private-subnets.tf
resource "aws_subnet" "eks_private" {
  count = terraform.workspace == "cloud-platform-development" ? 0 : 3

  vpc_id                  = module.vpc[0].vpc_id
  cidr_block              = cidrsubnet(lookup(local.cp_vpc_cidr, local.cluster_environment), 3, count.index + 4)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = false

  tags = merge({
    Name                              = "${local.cp_vpc_name}-eks-private-${data.aws_availability_zones.available.names[count.index]}"
    SubnetType                        = "EKS-Private"
    "kubernetes.io/role/internal-elb" = "1"
    Terraform                         = "true"
    Cluster                           = local.cp_vpc_name
    # Domain                            = local.vpc_base_domain_name
  }, local.tags)
}

resource "aws_route_table_association" "eks_private" {
  count = terraform.workspace == "cloud-platform-development" ? 0 : 3

  subnet_id      = aws_subnet.eks_private[count.index].id
  route_table_id = module.vpc[0].private_route_table_ids[count.index]
}
